--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
 	<meta charset="UTF-8">
@@ -7,12 +7,39 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Raleway:wght@300;400;500;600;700&display=swap"
+		rel="stylesheet">
+	<link rel="stylesheet" href="style.css">
 	<title>EKMI - индивидуальная мебель. Лучшая жизнь, созданная для вас!</title>
 </head>
 
 <body>
-
+	<header>
+		<div class="header">
+			<ul>
+				<li class="header__item">Каталог</li>
+				<li class="header__item">Индивидуальная мебель</li>
+				<li class="header__item">Контакты</li>
+				<li class="header__item">
+					<a>
+						<img src="./images/logo.svg" alt="Логотип">
+					</a>
+				</li>
+				<li class="header__item">О компании</li>
+				<li>
+					<a href="#" class="header__item-phone">+38 (099)-638-45-37</a>
+				</li>
+				<li class="header__item">
+					<select name="lang" id="lang">
+						<option value="ru">RU</option>
+						<option value="ua">UA</option>
+						<option value="en">EN</option>
+					</select>
+				</li>
+			</ul>
+		</div>
+	</header>
 </body>
 
 </html>
